# chain-trace

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: block_timestamp.py  cache_manager.py  calibrate_thresholds.py  camofox_starter.py  chain_trace.py  config.py  evm_explorer_client.py  fetch_twitter.py  holder_analyzer.py  rpc_manager.py  rpc_probe_cloudscraper.py  score_models.py  solscan_client.py  suspicious_detector.py  tx_history_fetcher.py  visualizer.py
templates/: calibration_dataset.example.json  config.example.json  score_input.example.json
tests/: test_all.py  test_calibrate_thresholds.py  test_chain_trace_cli.py  test_rpc_probe_cloudscraper.py  test_score_models.py
